<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appstaire</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_auth">Sign in Appstaire</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="title_activity_player">Player</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="label_now_playing">Now playing:</string>
    
    <string name="dummy_player_current_track_title">Johnny B. Goode</string>
    <string name="dummy_player_current_track_elapsed">0:00</string>
    <string name="dummy_player_current_track_duration">1:10</string>
    
    <string name="content_description_cover">Cover</string>
    <string name="content_description_previous">Previous</string>
    <string name="content_description_play">Play</string>
    <string name="content_description_pause">Pause</string>
    <string name="content_description_next">Next</string>

</resources>
